--- a/resources/sass/components/_variables.custom.scss
+++ b/resources/sass/components/_variables.custom.scss
@@ -5,8 +5,8 @@
 //
 
 // Theme colors
-$primary: rgba(55, 104, 113, 0.9);
-$primary-active: rgba(38, 68, 77, 0.9);
+$primary: #12625A;
+$primary-active: #0b3e39;
 $primary-light:    									#EEF6FF;
 $primary-light-dark:    							#212E48;
 $primary-inverse:  									#FFFFFF;
